--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta charset='UTF-8'/>
     <title>{{page.title}}</title>
     <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
-    <link rel='stylesheet' href='{{ site.baseurl }}/assets/css/app.css'>
+    <link rel='stylesheet' href='{{ site.baseurl }}/assets/css/application.css'>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   </head>
   <body>
