--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta charset='UTF-8'/>
     <title>{{page.title}}</title>
     <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
-    <link rel='stylesheet' href='{{ site.baseurl }}/assets/css/application.css'>
+    <link rel='stylesheet' href='{{ site.baseurl }}/assets/css/application.css' />
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   </head>
   <body>
@@ -16,5 +16,15 @@
 
     <div id='footer'>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-47404284-1', 'opendatams.github.io');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
