--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
     <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
     <link rel='stylesheet' href='{{ site.baseurl }}/assets/css/application.css' />
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="//use.typekit.net/hhs3qer.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
     <div id='container'>
