--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,20 +4,23 @@
 <html>
   <head>
     <meta charset='UTF-8'/>
+    <meta name="viewport" content="width=device-width initial-scale=1" />
     <title>{{page.title}}</title>
     <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
     <link rel='stylesheet' href='{{ site.baseurl }}/assets/css/application.css' />
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script type="text/javascript" src="//use.typekit.net/hhs3qer.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
     <div id='container'>
       {{content}}
     </div>
 
-    <div id='footer'>
+    <div id="footer">
+    <footer>
+          <a href="http://codeformuenster.de" alt="Code For Münster"><img src="http://codeformuenster.org/img/cfm_logo.png"></a>
+    </footer>
     </div>
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
