--- a/assets/css/application.css
+++ b/assets/css/application.css
@@ -36,9 +36,6 @@ body {
     background: white; 
     text-align: center;
     padding-top: 1px;}
-    #container #home h3 {
-      padding-top: 0;
-    }
     #container #home:last-child {
       margin-right: 0; }
     #container #home h1 {
@@ -49,7 +46,11 @@ body {
     #container #home h2 {
       font-size:2.0em;}
     #container #home h3 {
-      font-size:1.5em;}
+      font-size:1.5em;
+      padding-top: 0;}
+    #container #home p {
+      margin: 3px;
+    }
     #container #home #intro {
       line-height: 1.6em;
       width: 90%;
@@ -59,18 +60,11 @@ body {
       position: relative;
     }
     #container #home #intro #mapcontainer span {
-      /*visibility: hidden;*/
       position: absolute;
       top: 0px;
       left: 0px;
       padding: 2px;
     }
-    /*#container #home #intro #mapcontainer:hover > span {
-      visibility: visible;
-    }
-    #container #home #intro #mapcontainer:hover > #mapthumbnail {
-      visibility:hidden;
-    }*/
     #container #home #intro #mapcontainer #mapthumbnail {
       float:left;
       margin-right:5px;
