--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
     <div id="footer">
     <footer>
-          <a href="http://codeformuenster.de" alt="Code For Münster"><img src="http://codeformuenster.org/img/cfm_logo.png"></a>
+          <a href="http://codeformuenster.org" alt="Code for Münster Logo" title="Code for Münster"><img src="http://codeformuenster.org/img/cfm_logo.png"></a>
     </footer>
     </div>
 
