--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <title>{{page.title}}</title>
     <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
     <link rel='stylesheet' href='{{ site.baseurl }}/assets/css/application.css' />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   </head>
   <body>
