--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
     <link rel='stylesheet' href='{{ site.baseurl }}/assets/css/application.css' />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600|Raleway:400,600" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   </head>
   <body>
@@ -21,16 +22,5 @@
           <a href="http://codeformuenster.org" alt="Code for Münster Logo" title="Code for Münster"><img src="http://codeformuenster.org/img/cfm_logo.png"></a>
     </footer>
     </div>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-47404284-1', 'opendatams.github.io');
-      ga('send', 'pageview');
-
-    </script>
   </body>
 </html>
