update ODD content

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta charset='UTF-8'/>
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <title>{{page.title}}</title>
-    <link rel='shortcut icon' href='images/favicon.ico' type='image/x-icon' />
+    <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico" type="image/x-icon" />
     <link rel='stylesheet' href='{{ site.baseurl }}/assets/css/application.css' />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:600|Raleway:400,600" rel="stylesheet">
