fix some linting issues in layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,24 +3,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='UTF-8'/>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width initial-scale=1" />
     <title>{{page.title}}</title>
     <link rel="shortcut icon" href="{{ site.baseurl }}/assets/favicon.ico" type="image/x-icon" />
-    <link rel='stylesheet' href='{{ site.baseurl }}/assets/css/application.css' />
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/application.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:600|Raleway:400,600" rel="stylesheet">
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
   </head>
   <body>
-    <div id='container'>
+    <div id="container">
       {{content}}
     </div>
 
     <div id="footer">
-    <footer>
-          <a href="http://codeformuenster.org" alt="Code for Münster Logo" title="Code for Münster"><img src="http://codeformuenster.org/img/cfm_logo.png"></a>
-    </footer>
+      <footer>
+        <a href="http://codeformuenster.org" alt="Code for Münster Logo" title="Code for Münster"><img src="http://codeformuenster.org/img/cfm_logo.png"></a>
+      </footer>
     </div>
   </body>
 </html>
